fixed footer alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -167,7 +167,6 @@ h2{
 .author{
     align-self: flex-end;
     color: #1f2937d3;
-
 }
 .final{
     display: flex;
@@ -210,7 +209,7 @@ h2{
     padding: 4px 18px;
     flex-shrink: 0;
     font-weight: 700;
-}
+}   
 footer{
     display: flex;
     flex-flow: column wrap;
@@ -221,7 +220,10 @@ footer{
     gap: 3px;
     color: #F9FAF8;
 }
+footer .text{
+    text-align: center;
+}
 footer .credit{
     font-size: 13px;
-    color: rgb(255, 255, 255, .7)
+    color: rgb(255, 255, 255, .7);
 }
